delete a bunch of leftover stuff at the end of the document

--- a/main.tex
+++ b/main.tex
@@ -114,66 +114,21 @@ Number of to-dos used: \thetodocounter
 
 \chapter*{Material for lecture}
 
-
-
-
-
-
-Mike's 1995 announcement is a nice read. There are many snippets you could pull out of it for use here. ``$H\Q$ serves as the target for the Todd genus, but actually the Todd genus of a manifold is an integer and it turns out that $KU$ refines the Todd genus.''  The end of section 3, with $\tau \mapsto 1/\tau$, is mysterious.  In section 4, Mike claims that there's a $BU[6, \infty)$--structured splitting principle into sums of things of the form $(1 - \L_1)(1 - \L_2)(1 - \L_3)$.  He then says that one expects the characteristic series of a $BU[6, \infty)$--genus to be a series of $3$ variables, which is nice intuition.  Could mention that $\Theta^k$ is a kind of $k${\th} difference operator, so that things in the kernel of $\Theta^k$ are ``$k${\th} order polynomials''.  (More than this, the theorem of the cube is reasonable from this perspective, since $\Theta^3$ kills ``quadratic things'' and the topological object $H^2(-; \Z)$ classifying line bundles is indeed ``quadratic''.)  If the bundle admits a symmetry operation, then the fiber over $(x, y, -x-y)$ is canonically trivialized, so a $\Sigma$--structure on a symmetric line bundle is a $\Theta^3$--structure that restricts to the identity on these canonical parts.  Mike claims (Theorem 6.2) that if $1/2 \in E^0(*)$ or if $E$ is $K(n)$--local, $n \le 2$, then $B\String^E$ is the parameter space of $\Sigma$--structures on the sheaf of functions vanishing at the identity on $G_E$.  The map $M\String \to KO_{\Tate}$ actually factors through $M\Spin$, so even though this produces the right $q$--series, you really need to know that $M\String$ factors through $\tmf$ and $M\Spin$ \emph{doesn't} to deduce the modularity for $\String$--manifolds.  (You can prove modularity separately for $BU[6, \infty)$--manifolds, though, by essentially the same technique: refer to the rest of the (complex!) moduli of elliptic curves, which exist as $MU[6, \infty)$--spectra.)
-
-Generally: if $X$ is a space, then $X_{H\F_2}$ is a scheme with an $\Aut \widehat \G_a$--action. If $X$ is a spectrum (so it fails to have a diagonal map) then $(H\F_2)_* X$ is just an $\F_2$--module, also with an $\Aut \widehat \G_a$--action.
-
-The cohomology of a qc sheaf pushed forward from a scheme to a stack along a cover agrees with just the cohomology over the scheme. (In the case of $* \to * \mmod G$, this probably uses the cospan $* \to * \mmod G \leftarrow *$ with pullback $G$...)
+Mike's 1995 announcement is a nice read.  The end of section 3, with $\tau \mapsto 1/\tau$, is mysterious.
 
 Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.edu/{\textasciitilde}amathew/232b.pdf ) where lectures 3--5 address the theorem of the cube.
 
-Equivalences of various sorts of cohomologies: Ext in modules and quasicoherent cohomology (goodness. Hartshorne, I suppose); Ext in comodules and quasicoherent cohomology on stacks (COCTALOS Lemma 12.4); quasicoherent cohomology on simplicial schemes (Stacks project 09VK).
-
-Make clear the distinction between $E_n$ and $\widehat{E(n)}$. Maybe explain the Devinatz--Hopkins remark that $r: \widehat{E(n)} \to E_n$ is an inclusion of fixed points and as such does not classify the versal formal group law.
-
-
-when describing Quillen's model, he makes a lot of use of Gysin maps and Thom / Euler classes. at this point, maybe you can introduce what a Thom sheaf / Thom class is for a pointed formal curve?
-
-
-
-
-
-
-
-
 The Hattori--Stong theorem states that $MU_* \to K_* MU$ has image a direct summand.  Maybe this also deserves mention.  (Baker claims in \textit{Combinatorial and Arithmetic Identities Based on Formal Group Laws} that it has a direct algebraic proof given by Araki in \textit{Typical formal groups in complex cobordism and $K$-theory}.)
 
-
-
-
-
-
-
-
 + Warning: noncontinuous maps of high-dimensional formal affine spaces.
-+ Plausibility argument for square-zero deformations being classified by ``$\Ext^1(\G; M \otimes \G_a)$''
-+ Honda's theorem about $\zeta$--functions as manufacturing integral genera.
-+ Definition of forms of a module, map to Galois cohomology
-+ Computation of the Galois cohomology for: $H\F_p$, $MU/p$, $KU/p$
-+ Computation of the Galois cohomology for $\G_m$, explicit description of the invariant via the $\zeta$--function
 + Description of the Lubin--Tate tower and the local Langlands correspondence
 + Uniqueness of $\O_K$-module structure in characteristic zero
 
 \subsection*{Ideas}
 \begin{enumerate}
-\item Statement of Lurie's characterization of $\TMF$, using this to determine a map from $M\String$ by AHR
 \item Matt's calculation of $E_\infty$--orientations of $K(1)$--local spectra using the short free resolution of $MU$ in the $K(1)$--local category
-
----------------------
 \item Sinkinson's calculation and $M\BP\<m\>$--orientations
-\item The Serre--Tate theorem
-\item The fundamental domain of $\pi_{GH}$
 \end{enumerate}
-
-
-\subsection*{Resources}
-
-Morava's \textit{Forms of $K$--theory}
 
 Akhil wrote a couple of blog posts about Ochanine's theorem: \texttt{https://amathew.wordpress.com/2012/05/30/ochanines-theorem-on-elliptic-genera/} and \texttt{https://amathew.wordpress.com/2012/05/31/the-other-direction-of-ochaines-theorem/}. Mentioning a more precise result might lend to a more beefy introduction.
 
