--- a/mo.tex
+++ b/mo.tex
@@ -236,7 +236,7 @@ We define the \textit{multiplicative group scheme} by \[\mathbb G_m = \Spec \F_2
 \mathbb G_m \times \mathbb G_m & \xrightarrow{\mu} \mathbb G_m & x_1 \otimes x_2 & \mapsfrom x \\
 & & y_1 \otimes y_2 & \mapsfrom y, \\
 \mathbb G_m & \xrightarrow{\chi} \mathbb G_m & (y, x) & \mapsfrom (x, y), \\
-\Spec R & \xrightarrow{\eta} \mathbb G_m & 1 & \mapsfrom x, y.
+\Spec \F_2 & \xrightarrow{\eta} \mathbb G_m & 1 & \mapsfrom x, y.
 \end{align*}
 \end{example}
 
