don’t use Gamma as evaluation

--- a/powerops.tex
+++ b/powerops.tex
@@ -701,7 +701,7 @@ A topological enrichment can be thought of as an enhancement of a classical alge
 One of the main upsides of producing a topological enrichment is that it is naturally equipped with a spectral sequence computing the homotopy of its global sections, coming from recovering $\sheaf O(\stack N)$ as the homotopy limit of finer and finer covers of $\stack N$.
 
 \begin{lemma}
-For $\sheaf O$ a topological enrichment of an appropriate map $\stack N \to \moduli{fg}$, there is a spectral sequence \[E_2^{s, t} = H^s(\stack{N}; \pi_t \circ \sheaf O) \Rightarrow \pi_{t-s} \Gamma(\stack{N}; \sheaf O). \qed\]
+For $\sheaf O$ a topological enrichment of an appropriate map $\stack N \to \moduli{fg}$, there is a spectral sequence \[E_2^{s, t} = H^s(\stack{N}; \pi_t \circ \sheaf O) \Rightarrow \pi_{t-s} \sheaf{O}(\stack{N}). \qed\]
 \end{lemma}
 
 \begin{lemma}
