--- a/mo.tex
+++ b/mo.tex
@@ -173,7 +173,7 @@ This powers an induction that shows that $\HFtwo_* \RP^\infty$ has a single clas
 
 \section{Cohomology rings and affine schemes}\label{SectionSchemesOverF2}
 
-An abbreviated summary of this book is that we are going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before actually doing any algebraic topology, we should recall what this means on the level of algebra.  The core idea is to replace a ring $R$ \todo{Should be $\F_2$ algebra here?} by the functor it corepresents, which we will denote by $\Spec R$.  For any ``test $\F_2$--algebra'' $T$, we set \[(\Spec R)(T) := \CatOf{Algebras}_{\F_2/}(R, T) \cong \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R).\]  More generally, we have the following definition:
+An abbreviated summary of this book is that we are going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before actually doing any algebraic topology, we should recall what this means on the level of algebra.  The core idea is to replace an $\F_2$--algebra $R$ by the functor it corepresents, which we will denote by $\Spec R$.  For any other ``test $\F_2$--algebra'' $T$, we set \[(\Spec R)(T) := \CatOf{Algebras}_{\F_2/}(R, T) \cong \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R).\]  More generally, we have the following definition:
 \begin{definition}\label{DefnAffineF2Scheme}
 An \textit{affine $\F_2$--scheme} is a functor $X: \CatOf{Algebras}_{\F_2/} \to \CatOf{Sets}$ which is (noncanonically) isomorphic to $\Spec R$ for some $\F_2$--algebra $R$.  Given such an isomorphism, we will refer to $\Spec R \to X$ as a \textit{parameter} for $X$ and its inverse $X \to \Spec R$ as a \textit{coordinate} for $X$.
 \end{definition}
@@ -189,11 +189,11 @@ There is an equivalence of categories
 
 The centerpiece of thinking about rings in this way, for us and for now, is to translate between a presentation of $R$ as a quotient of a free algebra and a presentation of $(\Spec R)(T)$ as selecting tuples of elements in $T$ subject to certain conditions.  Consider the following example:
 \begin{example}\label{FiniteOrderAffineSpaceDefn}
-Set $R_1 = \F_2[x]$.  Then elements of $(\Spec R_1)(T)$ can be reconsidered as functions by \[(\Spec R_1)(T) = \CatOf{Algebras}_{\F_2/}(\F_2[x], T),\] and such a function is entirely determined by where $x$ is sent.  By consequence, this Hom--set is naturally isomorphic to $T$ itself.  Consider also what happens when we impose a relation by passing to $R_2 = \F_2[x] / (x^{n+1})$.  A function in \[(\Spec R_2)(T) = \CatOf{Algebras}_{\F_2/}(\F_2[x] / (x^{n+1}), T)\] is again determined by where $x$ is sent, but now $x$ can only be sent to elements which are nilpotent of order $n+1$.  These schemes are both important enough that we give them special names:
+Set $R_n = \F_2[x_1, \ldots, x_n]$.  Elements of $(\Spec R_n)(T)$ can be identified with $n$--tuples of elements of $T$, since a function in \[(\Spec R_n)(T) = \CatOf{Algebras}_{\F_2/}(\F_2[x_1, \ldots, x_n], T),\] is entirely determined by where the $x_j$ are sent.  Consider also what happens when we impose a relation by passing to $R_n^J = \F_2[x_1, \ldots, x_n] / (x_k^{j_k+1})$: a function in \[(\Spec R_n^J)(T) = \CatOf{Algebras}_{\F_2/}(\F_2[x_1, \ldots, x_n] / (x_k^{j_k+1}), T)\] is again determined by where the $x_j$ are sent, but now $x_j$ can only be sent to an element which is nilpotent of order $j_k+1$.  These schemes are both important enough that we give them special names:
 \begin{align*}
-\mathbb A^1 & := \Spec \F_2[x], & \mathbb A^{1, (n)} & := \Spec \F_2[x] / (x^{n+1}).
+\mathbb A^n & := \Spec \F_2[x_1, \ldots, x_n], & \mathbb A^{n, J} & := \Spec \F_2[x_1, \ldots, x_n] / (x_k^{j_k+1}).
 \end{align*}
-The symbol ``$\mathbb A^1$'' is pronounced ``the affine line''---reasonable, since the value $\mathbb A^1(T)$ is, indeed, a single $T$'s worth of points.  Note that the quotient map $R_1 \to R_2$ induces an inclusion $\mathbb A^{1, (n)} \to \mathbb A^1$ and that $\mathbb A^{1, (0)}$ is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f: \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we pronounce ``$\mathbb A^{1, (0)}$'' as ``the origin on the affine line'' and ``$\mathbb A^{1, (n)}$'' as ``the $(n+1)${\st} order (nilpotent) neighborhood of the origin in the affine line''.
+The functor $\mathbb A^n$ is called \textit{affine $n$--space}---reasonable, since the value $\mathbb A^n(T)$ is isomorphic to $T^n$.  In particular, we refer to $\mathbb A^1$ as the \textit{affine line}.  Note that the quotient map $R_1 \to R_1^{(j)}$ induces an inclusion $\mathbb A^{1, (j)} \to \mathbb A^1$ and that $\mathbb A^{1, (0)}$ is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f: \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we declare ``$\mathbb A^{1, (0)}$'' to be the \textit{origin on the affine line} and $\mathbb A^{1, (j)}$ to be the \textit{$(n+1)${\st} order (nilpotent) neighborhood of the origin} in the affine line.
 \end{example}
 
 We can also use this language to re-express another common object arising in algebraic topology: the Hopf algebra, which appears when taking the mod--$2$ cohomology of an $H$--group.  In addition to the usual ring structure on cohomology groups, the $H$--group multiplication, unit, and inversion maps additionally induce a diagonal map $\Delta$, an augmentation map $\eps$, and an antipode $\chi$ respectively.  Running through the axioms, one quickly checks the following:
@@ -261,18 +261,18 @@ This group scheme has several interesting properties, which we will merely state
 \end{example}
 
 \todo{Jeremy had some motivation for this, that quite generally one wants to consider ind-systems of compact objects.  Why does one want this?  Is it better motivation than just dropping into it?}
-We now turn to a different class of examples, which will wind up being the key players in our upcoming topological story.  To begin, consider the colimit of the sets $\colim_{n \to \infty} \mathbb A^{1,(n)}(T)$, which is of use in algebra: it is the collection of nilpotent elements in $T$.  These kinds of conditions which are ``unbounded in $n$'' appear frequently enough that we are moved to give these functors a name too:
+We now turn to a different class of examples, which will wind up being the key players in our upcoming topological story.  To begin, consider the colimit of the sets $\colim_{j \to \infty} \mathbb A^{1,(j)}(T)$, which is of use in algebra: it is the collection of nilpotent elements in $T$.  These kinds of conditions which are ``unbounded in $j$'' appear frequently enough that we are moved to give these functors a name too:
 \begin{definition}
 \todo{Erick points out that the morphisms in this system should be infintesimal thickenings.  Is there a functor-of-points way to recognize such things, without reaching all the way up to talking about ideals?  (He also thinks that we should allow finite type in addition to finite, but I don't think I want that. I've been wrong before, though.)}
 An \textit{affine formal scheme} is an ind-system of finite affine schemes.\footnote{This has the effect of formally adjoining colimits of filtered diagrams to the category of finite affine schemes.  In fact, a functor $X\co \CatOf{Algebras} \to \CatOf{Sets}$ which preserves finite limits is a formal scheme exactly when there exists a family of maps $X_i \to X$ from a set of affine schemes $X_i$ such that the induced map \[\coprod_i X_i(T) \to X(T)\] is jointly surjective for all test algebras $T$~\cite[Proposition 4.6]{StricklandFSFG}.}  The morphisms between two formal schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\alpha \colim_\beta \CatOf{Schemes}(X_\alpha, Y_\beta).\]  Given affine charts $X_\alpha = \Spec R_\alpha$, we will glibly suppress the system from the notation and write \[\Spf R := \{\Spec R_\alpha\}.\]
 \end{definition}
 
 \begin{example}\label{FormalGaExample}
-The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  After all, the sum of two elements which are nilpotent of order $n+1$ can only be guaranteed to be nilpotent of order $2n+1$.  It follows that the entire ind-system $\{\mathbb A^{1, (n)}\} =: \A^1$ supports a group structure, even though none of its constituent pieces do.  We call such an object a \textit{formal group scheme}, and this particular formal group scheme we denote by $\G_a$.
+The individual schemes $\mathbb A^{1, (j)}$ do not support group structures.  After all, the sum of two elements which are nilpotent of order $j+1$ can only be guaranteed to be nilpotent of order $2j+1$.  It follows that the entire ind-system $\{\mathbb A^{1, (j)}\} =: \A^1$ supports a group structure, even though none of its constituent pieces do.  We call such an object a \textit{formal group scheme}, and this particular formal group scheme we denote by $\G_a$.
 \end{example}
 
 \begin{example}
-Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, and they nest together in a complicated way: there is an inclusion of $\Gm[n]$ into $\Gm[nm]$.  There is also a second filtration along the lines of the one considered in \Cref{FormalGaExample}: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes form a sequential system\todo{... of infinitesimal thickenings}, but they are only occasionally group schemes.  Specifically, $\Gm^{(2^j)}$ is a group scheme, in which case $\Gm^{(2^j)} \cong \Gm[2^j]$.\footnote{Additionally, the \emph{only} values of $n$ for which $\Gm[n]$ is an infinitesimal thickening of $\Gm[1]$ are those of the form $n = 2^j$.}  We define $\G_m$ using this common subsystem: \[\G_m := \{\Gm^{(2^j)}\}_{j=0}^\infty.\]
+Similarly, one can define the scheme $\Gm[j]$ of elements of unipotent order $j$: \[\Gm[j] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^j - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, and they nest together in a complicated way: there is an inclusion of $\Gm[j]$ into $\Gm[jk]$.  There is also a second filtration along the lines of the one considered in \Cref{FormalGaExample}: \[\Gm^{(j)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^j)}.\]  These schemes form a sequential system, but they are only occasionally group schemes.  Specifically, $\Gm^{(2^k)}$ is a group scheme, in which case $\Gm^{(2^k)} \cong \Gm[2^k]$.\footnote{Additionally, the \emph{only} values of $j$ for which $\Gm[j]$ is an infinitesimal thickening of $\Gm[1]$ are those of the form $j = 2^k$.}  We define $\G_m$ using this common subsystem: \[\G_m := \{\Gm^{(2^k)}\}_{k=0}^\infty.\]
 \end{example}
 
 Let us now consider the example that we closed with last time, where we calculated $\HFtwo^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec \HFtwo^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is so useful that we will give it a notation all of its own:
