shorten some of the section titles

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -34,7 +34,7 @@ which mediate the difference between $E_* BU$ and $E_* BU[6, \infty)$ by means o
 
 
 
-\section{Unstable contexts and the unstable Steenrod algebra}\label{UnstableContextsSection}
+\section{Unstable contexts and the Steenrod algebra}\label{UnstableContextsSection}
 
 In this Lecture, our goal is to codify the study of unstable cooperations, beginning with an unstructured account of how they arise.  Recall that for a ring map $f\co R \to S$, in \Cref{StableContextLecture} we studied the problem of recovering an $R$--module from an $S$--module plus extra data.  The intermediate category of extra data that we settled on was that of \textit{descent data}, which we phrased most enduringly as a certain cosimplicial diagram.  Stripping away the commutative algebra, the only categorical formality that went into this was the adjunction
 \begin{center}
@@ -262,7 +262,7 @@ Tilman Bauer has studied some of the algebraic geometry associated to unstable c
 
 
 
-\section{Mixed unstable cooperations and their algebraic model}\label{UnstableAlgebraicModelSection}
+\section{The algebra of mixed unstable cooperations}\label{UnstableAlgebraicModelSection}
 
 For simplicity, we return to the stable setting of \Cref{StableContextLecture} for a moment.  For an arbitrary spectrum $X$ and ring spectrum $E$, the completion $X^\wedge_E$ is typically a quite poor approximation to $X$ itself.  Though this can be partially mediated by placing hypotheses on $X$, the approximation can always be improved by ``enlarging'' the cohomology theory involved---namely, selecting a second ring spectrum $F$ and forming the completion $X^\wedge_{E \vee F}$ at the wedge.  This has the following factorization property
 \begin{center}
