change the intro a bit to reflect some referee complaints

--- a/powerops.tex
+++ b/powerops.tex
@@ -2,7 +2,7 @@
 
 
 
-\chapter{Power operations}
+\chapter{Power operations}\label{PowerOpnsChapter}
 
 Our goal in this Appendix is to give a tour of the interaction of the $\sigma$--orientation with a topic of modern research, the theory of $E_\infty$ ring spectra, in a manner consistent with the rest of the topics in this book.  Because the theory of $E_\infty$ ring spectra (in particular: their algebraic geometry) is still very much developing, we have no hope of stating results in their maximum strength or giving a completely clear picture---as of this writing, the maximum strength is unknown and the picture is still resolving.  Although $E_\infty$ ring spectra themselves were introduced decades ago, we will even avoid giving a proper definition of them here, instead referring to the original work of May and collaborators~\cite{EKMM} and the more recent work of Lurie~\cite[Chapter 7]{LurieHA} for a proper treatment.  In acknowledgement of this underwhelming level of rigor, we have downgraded our discussion from a Case Study to an Appendix.
 
