--- a/intro.tex
+++ b/intro.tex
@@ -84,16 +84,14 @@ Leaving aside the extension problem for the moment, their main theorem is the fo
 For $E$ an even--periodic cohomology theory, \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``$C^3(\G_E; \sheaf I(0))$'' is a certain scheme.  When $E$ is taken to be elliptic, so that there is a specified isomorphism $\G_E \cong C^\wedge_0$ for $C$ an elliptic curve, the theory of elliptic curves furnishes the scheme with a canonical point.  Hence, there is a preferred class $MU[6, \infty) \to E$, natural in the choice of elliptic $E$. \qed
 \end{theorem}
 
-\noindent Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory.
-
-The structure of the book will be to work through a sequence of case studies where this perspective shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.  Having seen that through, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the $\sigma$--orientation and its extensions.  The overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.  In particular, it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
+Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory, and we will work through a sequence of case studies where this perspective shines through most brightly.  In particular, rather than taking an optimal route to the Ando--Hopkins--Strickland result, we will use it as a gravitational slingshot to cover many anciliary topics which are also governed by the technology of formal geometry.  We will begin by working through Thom's calculation of the homotopy of $MO$, which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.  Having seen that through, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the $\sigma$--orientation and its extensions.  Again, the overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions: it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
 
 We should also mention that we will specifically \emph{not} discuss the following aspects of this story:
 \begin{itemize}
 \item Analytic techniques will be completely omitted.  Much of modern research stemming from the above problem is an attempt to extend index theory across Witten's genus, or to find a ``geometric cochains'' model of certain elliptic cohomology theories.  These often mean heavy analytic work, and we will strictly confine ourselves to the domain of homotopy theory.
 \item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  Again, much of the contemporary research about $\tmf$ is an attempt to find a geometric model, so that geometric techniques can be imported---including equivariance and the geometry of quantum field theories, to name two.
 \item In a different direction, our focus will not linger on actually computing bordism rings $MX_*$, nor will we consider geometric constructions on manifolds and their behavior after imaging into the bordism ring.  This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.  This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
-\item The geometry of $E_\infty$ rings will also be avoided, at least to the extent possible.  Such objects become inescapable by the conclusion of our story, but there are better resources from which to learn about $E_\infty$ rings, and the pre--$E_\infty$ story is not told so often these days.  So, we will focus on the unstructured part and leave $E_\infty$ rings to other authors.
+\item The geometry of $E_\infty$ rings will also be avoided, at least to the extent possible.  Such objects become inescapable by the conclusion of our story, but there are better resources from which to learn about $E_\infty$ rings, and the pre--$E_\infty$ story is not told so often these days.  So, we will focus on the unstructured part, relegate the $E_\infty$ rings to \Cref{PowerOpnsChapter}, and leave their details to other authors.
 \item There will be plenty of places where we will avoid making statements in maximum generality or with maximum thoroughness.  The story we are interested in telling draws from a blend of many others from different subfields of mathematics, many of which have their own dedicated textbooks.  Sometimes this will mean avoiding stating the most beautiful theorem in a subfield in favor of a theorem we will find more useful.  Other times this will mean abbreviating someone else's general definition to one more specialized to the task at hand.  In any case, we will give references to other sources where you can find these cast in starring roles.
 \end{itemize}
 
