add pullback corners to various diagrams

--- a/mo.tex
+++ b/mo.tex
@@ -40,7 +40,7 @@ Let $\xi$ be the tautological $S^0$--bundle over the unpointed space $\RP^\infty
 Now we catalog a bunch of useful properties of the Thom space functor.  Firstly, recall that a spherical bundle over $X$ is the same data as a map $X \to B \GL_1 S^{n-1}$, where $\GL_1 S^{n-1}$ is the subspace of $F(S^{n-1}, S^{n-1})$ expressed by the pullback of spaces
 \begin{center}
 \begin{tikzcd}
-\GL_1 S^{n-1} \arrow{r} \arrow{d} & \CatOf{Spaces}(S^{n-1}, S^{n-1}) \arrow{d} \\
+\GL_1 S^{n-1} \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \CatOf{Spaces}(S^{n-1}, S^{n-1}) \arrow{d} \\
 h\CatOf{Spaces}(S^{n-1}, S^{n-1})^{\times} \arrow{r} & h\CatOf{Spaces}(S^{n-1}, S^{n-1}) \arrow[equal]{r} & \pi_0 \CatOf{Spaces}(S^{n-1}, S^{n-1}).
 \end{tikzcd}
 \end{center}
